# Othello

./: CMakeLists.txt  README.md
src/: main.cpp  plan.txt
src/Controller/: Controller.cpp  Controller.h
src/Model/: Model.cpp  Model.h  Player.cpp  Player.h  Utility.h
src/View/: StandardView.cpp  StandardView.h  View.cpp  View.h
